Adicionada mensagem quando não houver tarefas

--- a/CarrefourAndroidDeveloper/applications/2DoList/app/src/main/AndroidManifest.xml
+++ b/CarrefourAndroidDeveloper/applications/2DoList/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.2DoList">
-        <activity
-            android:name=".ui.MainActivity"
+
+        <activity android:name=".ui.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,15 +18,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".ui.AddTaskActivity"
-            android:exported="true">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
 
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
-        </activity>
+        <activity android:name=".ui.AddTaskActivity" />
     </application>
 
 </manifest>
